--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,17 @@
-db.dir=db
+jdk.version = 13
 
-postgresql.classpath=lib/postgresql-42.0.0.jar
+db.dir = db
+lib.dir = lib
+src.dir = src
+test.dir = ${src.dir}/test
+build.dir = out/production/web-prac
+report.dir = report
 
-postgresql.driver=org.postgresql.Driver
-postgresql.localhost=jdbc:postgresql://localhost/
-postgresql.database=personnel
-postgresql.user=user
-postgresql.password=password
+testng.classpath = ${lib.dir}/testng-6.14.3.jar
+postgresql.classpath = ${lib.dir}/postgresql-42.0.0.jar
+
+postgresql.driver = org.postgresql.Driver
+postgresql.localhost = jdbc:postgresql://localhost/
+postgresql.database = personnel
+postgresql.user = user
+postgresql.password = password
