--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<project basedir="." default="setup-db" name="personnel">
+<project basedir="." default="all" name="personnel">
 
   <property file="build.properties"/>
 
   <target name="setup-db">
     <ant antfile="${db.dir}/build.xml"/>
   </target>
+
+  <target name="build">
+    <ant antfile="${src.dir}/build.xml"/>
+  </target>
+
+  <target name="run-tests" depends="setup-db, build">
+    <ant antfile="${test.dir}/build.xml"/>
+  </target>
+
+  <target name="clean">
+    <delete failonerror="false" includeEmptyDirs="true">
+      <fileset dir="${build.dir}"/>
+      <fileset dir="${report.dir}"/>
+    </delete>
+  </target>
+
+  <target name="all" depends="clean, setup-db, build, run-tests"/>
 
 </project>
