--- a/build.properties
+++ b/build.properties
@@ -4,14 +4,9 @@ db.dir = db
 lib.dir = lib
 src.dir = src
 test.dir = ${src.dir}/test
+web.dir = web
 build.dir = out/production/web-prac
 report.dir = report
 
 testng.classpath = ${lib.dir}/testng-6.14.3.jar
 postgresql.classpath = ${lib.dir}/postgresql-42.0.0.jar
-
-postgresql.driver = org.postgresql.Driver
-postgresql.localhost = jdbc:postgresql://localhost/
-postgresql.database = personnel
-postgresql.user = user
-postgresql.password = password
