--- a/web/resources/database.properties
+++ b/web/resources/database.properties
@@ -3,7 +3,8 @@ postgresql.localhost = jdbc:postgresql://localhost/
 postgresql.database = personnel
 postgresql.user = user
 postgresql.password = password
-hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = update
 current_session_context_class = org.hibernate.context.internal.ThreadLocalSessionContext
