add raw pages, update ant build configuration

--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,28 @@
-jdk.version = 13
+jdk.version = 8
+
+glassfish.home = /Library/Java/glassfish5/glassfish
+glassfish.admin.port = 4848
+glassfish.domain = domain1
+
+war.file = personnel.war
+war.name = personnel
 
 db.dir = db
 lib.dir = lib
 src.dir = src
 test.dir = ${src.dir}/test
-build.dir = out/production/web-prac
+webapp.dir = out/artifacts/personnel
+web.dir = ${src.dir}/web
+dist.dir = ${webapp.dir}
+build.dir = out/production/personnel
 report.dir = report
+selenium.dir = ${src.dir}/selenium
 
 testng.classpath = ${lib.dir}/testng-6.14.3.jar
 postgresql.classpath = ${lib.dir}/postgresql-42.0.0.jar
+
+postgresql.driver = org.postgresql.Driver
+postgresql.localhost = jdbc:postgresql://localhost/
+postgresql.database = personnel
+postgresql.user = user
+postgresql.password = password
