--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,12 @@
 
   <property file="build.properties"/>
 
+  <presetdef name = "asadmin">
+    <java jar = "${glassfish.home}/modules/admin-cli.jar" fork = "true" jvm = "${java.home}/bin/java">
+      <arg line = "--port ${glassfish.admin.port}"/>
+    </java>
+  </presetdef>
+
   <target name="setup-db">
     <ant antfile="${db.dir}/build.xml"/>
   </target>
@@ -11,9 +17,9 @@
     <ant antfile="${src.dir}/build.xml"/>
   </target>
 
-  <target name="run-tests" depends="setup-db, build">
-    <ant antfile="${test.dir}/build.xml"/>
-  </target>
+<!--  <target name="run-tests" depends="setup-db, build">-->
+<!--    <ant antfile="test/build.xml"/>-->
+<!--  </target>-->
 
   <target name="clean">
     <delete failonerror="false" includeEmptyDirs="true">
@@ -22,6 +28,45 @@
     </delete>
   </target>
 
-  <target name="all" depends="clean, setup-db, build, run-tests"/>
+  <target name = "clean-war">
+    <delete failonerror = "false">
+      <fileset dir = "${webapp.dir}"/>
+    </delete>
+  </target>
+
+  <target name = "build-war">
+    <ant antfile = "${web.dir}/build.xml"/>
+  </target>
+
+  <target name = "start-server">
+    <asadmin failonerror = "true">
+      <arg value = "start-domain"/>
+      <arg value = "${glassfish.domain}"/>
+    </asadmin>
+  </target>
+
+  <target name = "shutdown-server">
+    <asadmin failonerror = "true">
+      <arg value = "stop-domain"/>
+      <arg value = "${glassfish.domain}"/>
+    </asadmin>
+  </target>
+
+  <target name = "deploy">
+    <asadmin failonerror = "true">
+      <arg value = "deploy"/>
+      <arg value = "--force=true"/>
+      <arg value = "${webapp.dir}/${war.file}"/>
+    </asadmin>
+  </target>
+
+  <target name = "undeploy">
+    <asadmin failonerror = "true">
+      <arg value = "undeploy"/>
+      <arg value = "${war.name}"/>
+    </asadmin>
+  </target>
+
+  <target name="all" depends="clean, setup-db, build"/>
 
 </project>
