--- a/src/build.xml
+++ b/src/build.xml
@@ -10,7 +10,7 @@
 
     <target name="build">
         <mkdir dir="${build.dir}"/>
-        <copy file="src/hibernate.cfg.xml" todir="${build.dir}"/>
+        <copy file="${src.dir}/hibernate.cfg.xml" todir="${build.dir}"/>
 
         <javac includeantruntime="false"
                source="${jdk.version}" target="${jdk.version}"
